tests/ui/lifetimes/issue-107492-default-value-for-lifetime.rs
pub struct DefaultLifetime<'a, 'b = 'static> {
                                   //~^ ERROR unexpected default lifetime parameter
    _marker: std::marker::PhantomData<&'a &'b ()>,
}

fn main(){}
